<resources>
    <string name="app_name">ServerOrderApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="menu_category">Categories</string>
    <string name="menu_food_list">Food list</string>
    <string name="menu_order">Orders</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="menu_shipper">Shipper</string>

    <string name="menu_sign_out">Sign out</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="menu_best_deals">Best Deals</string>
    <string name="menu_most_popular">Most popular</string>
    <string name="menu_new">News</string>
</resources>